crates/nash-can/tests/snapshots/kinds__term_annotation_adds_a_representation_predicate.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype wrapper ('a : Term) = Wrap 'a\n"
---
(
    [
        (
            "wrapper",
            Arrow(
                Type,
                Type,
            ),
            [
                Implied {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "base",
                                },
                            ),
                            name: "Primitive",
                        },
                        name: "Term",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 6,
                                    column: 15,
                                },
                                end: Position {
                                    line: 6,
                                    column: 17,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
            ],
        ),
    ],
    [],
)
