crates/nash-can/tests/snapshots/kinds__ternary_self_application_fails_before_annotation_checking.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype tag 'a = Tag\ntype s 'f 'g 'a = S ('g ('f 'f 'a))\nidentity : s s s tag -> s s s tag\nidentity value = value\n"
info: diagnostic
---
nash::names::kind_infinite

  × This application in field 1 of little constructor `S` in `s` would require an
  │ infinite kind:
   ╭─[src/Main.nash:7:29]
 6 │ type tag 'a = Tag
 7 │ type s 'f 'g 'a = S ('g ('f 'f 'a))
   ·                             ──
 8 │ identity : s s s tag -> s s s tag
   ╰────
  help: Check the type application and the kinds of its arguments.
