crates/nash-can/tests/snapshots/kinds__unused_declaration_checks_conflicting_parameter_bounds_eagerly.snap
---
source: crates/nash-can/tests/kinds.rs
description: "type unused 'a = Unused (list 'a) ('a unit)"
---
[
    KindMismatch {
        region: Region {
            start: Position {
                line: 5,
                column: 39,
            },
            end: Position {
                line: 5,
                column: 43,
            },
        },
        context: TypeArg {
            head: Var(
                "a",
            ),
            index: 0,
        },
        expected: KindScheme {
            bounds: [
                KindSet(
                    8,
                ),
            ],
            kind: Var(
                0,
            ),
            applications: [],
        },
        actual: KindScheme {
            bounds: [
                KindSet(
                    3,
                ),
            ],
            kind: Var(
                0,
            ),
            applications: [],
        },
    },
]
