crates/nash-can/tests/snapshots/kinds__unused_declaration_rejects_conflicting_parameter_kinds.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype unused 'a = Unused (list 'a) ('a unit)\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in field 2 of little constructor `Unused` in `unused`.
   ╭─[src/Main.nash:6:39]
 5 │ 
 6 │ type unused 'a = Unused (list 'a) ('a unit)
   ·                                       ────
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
