crates/nash-can/tests/snapshots/kinds__uppercase_alias_little_body.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype alias Count = int\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Big` in the uppercase name of alias `Count`:
   ╭─[src/Main.nash:6:20]
 5 │ 
 6 │ type alias Count = int
   ·                    ───
   ╰────
  help: The type has `Const` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
